<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/primary"
	android:fillViewport="true"
	android:elevation="16dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/logo_view"
			android:layout_width="match_parent"
			android:layout_height="110dp"
			android:elevation="6dp"
			android:scaleType="centerCrop"
			android:src="@drawable/logo" />

		<LinearLayout
			android:id="@+id/profile_panel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:visibility="gone">

			<ImageView
				android:id="@+id/profile_photo_view"
				android:layout_width="@dimen/profile_photo_size"
				android:layout_height="@dimen/profile_photo_size"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="@dimen/offset_normal"
				android:layout_marginTop="@dimen/offset_normal" />

			<TextView
				android:id="@+id/profile_login_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:textColor="@color/white"
				android:textSize="@dimen/profile_login_size" />

		</LinearLayout>

		<TextView
			android:id="@+id/all_category_view"
			style="@style/CategoryItem"
			android:layout_marginTop="@dimen/offset_big"
			android:text="@string/category_all" />

		<TextView
			android:id="@+id/news_category_view"
			style="@style/CategoryItem"
			android:text="@string/category_news" />

		<TextView
			android:id="@+id/articles_category_view"
			style="@style/CategoryItem"
			android:text="@string/category_articles" />

		<TextView
			android:id="@+id/reviews_category_view"
			style="@style/CategoryItem"
			android:text="@string/category_reviews" />

		<TextView
			android:id="@+id/software_category_view"
			style="@style/CategoryItem"
			android:text="@string/category_software" />

		<TextView
			android:id="@+id/games_category_view"
			style="@style/CategoryItem"
			android:text="@string/category_games" />

		<View
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/primary_dark"
			android:orientation="vertical">

			<TextView
				android:id="@+id/login_view"
				style="@style/CategoryItem"
				android:text="@string/signIn" />

			<TextView
				android:id="@+id/logout_view"
				style="@style/CategoryItem"
				android:text="@string/signOut" />

			<TextView
				android:id="@+id/feedback_view"
				style="@style/CategoryItem"
				android:text="@string/feedback" />

			<TextView
				android:id="@+id/about_view"
				style="@style/CategoryItem"
				android:text="@string/about" />

		</LinearLayout>

	</LinearLayout>

</ScrollView>
