<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white"
	android:orientation="vertical">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		style="@style/Toolbar" />

	<EditText
		android:id="@+id/message_edit_text"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="top"
		android:hint="@string/add_comment_text_hint"
		android:inputType="textMultiLine" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:orientation="horizontal"
		android:padding="@dimen/offset_normal">

		<TextView
			android:id="@+id/cancel_button"
			style="@style/MaterialFlatButton"
			android:layout_gravity="center"
			android:text="@string/cancel" />

		<TextView
			android:id="@+id/add_comment_button"
			style="@style/MaterialFlatButton"
			android:layout_gravity="center"
			android:layout_marginLeft="@dimen/offset_normal"
			android:text="@string/add_comment" />

	</LinearLayout>

</LinearLayout>
