<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@color/background"
	android:orientation="vertical">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		style="@style/Toolbar" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:orientation="vertical"
				android:padding="@dimen/offset_normal"
				android:divider="@drawable/divider_normal"
				android:showDividers="middle">

				<com.rey.material.widget.EditText
					android:id="@+id/login_view"
					style="@style/EditTextView"
					android:inputType="text"
					android:hint="@string/login_hint" />

				<com.rey.material.widget.EditText
					android:id="@+id/password_view"
					style="@style/EditTextView"
					android:inputType="textPassword"
					android:hint="@string/password_hint" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:divider="@drawable/divider_normal"
					android:showDividers="middle">

					<four.pda.ui.AspectRatioImageView
						android:id="@+id/captcha_image_view"
						android:layout_width="150dp"
						android:layout_height="wrap_content"
						android:layout_marginBottom="@dimen/offset_normal"
						android:scaleType="centerCrop"
						app:aspectRatio="0.42" />

					<com.rey.material.widget.EditText
						android:id="@+id/captcha_text_view"
						style="@style/EditTextView"
						android:inputType="number"
						android:layout_marginBottom="@dimen/offset_normal"
						android:hint="@string/captcha_hint" />

				</LinearLayout>

			</LinearLayout>

		</ScrollView>

		<four.pda.ui.SupportView_
			android:id="@+id/support_view"
			style="@style/SupportView"/>

	</FrameLayout>

</LinearLayout>
